2013-10-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/DependParser.hpp (main): some tests using Boost::spirit::qi.

