@@ -1,26 +1,35 @@
-#include <boost/spirit/include/qi.hpp>
-#include <boost/spirit/include/phoenix_operator.hpp>
-#include <iostream>
-#include <string>
-#include <algorithm>
-
 #include "DependParser.hpp"
 
-using namespace boost::spirit;
-using namespace std;
-using namespace boost::spirit::classic;
-int main(int argc, char **argv)
+int
+main()
 {
-  const string input("WikiName > 3.15");
-    /**
-    parse_info<string::const_iterator> pInfo = parse(input.begin(), 
-						     input.end(),
-                                                     depend_parser
-                                                    );
-    **/
-    parse_info<string::const_iterator> pInfo = p
-      qi::phrase_parse(input.begin(), input.end(), depend_parser);
+    std::cout << "/////////////////////////////////////////////////////////\n\n";
+    std::cout << "\t\tA comma separated list parser for Spirit...\n\n";
+    std::cout << "/////////////////////////////////////////////////////////\n\n";
 
-        
+    std::cout << "Give me a comma separated list of numbers.\n";
+    std::cout << "Type [q or Q] to quit\n\n";
+
+    std::string str;
+    while (getline(std::cin, str))
+    {
+        if (str.empty() || str[0] == 'q' || str[0] == 'Q')
+            break;
+
+        if (client::parse_numbers(str.begin(), str.end()))
+        {
+            std::cout << "-------------------------\n";
+            std::cout << "Parsing succeeded\n";
+            std::cout << str << " Parses OK: " << std::endl;
+        }
+        else
+        {
+            std::cout << "-------------------------\n";
+            std::cout << "Parsing failed\n";
+            std::cout << "-------------------------\n";
+        }
+    }
+
+    std::cout << "Bye... :-) \n\n";
     return 0;
 }
