@@ -1,3 +1,8 @@
+2013-10-07  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/DependParser.hpp (parse_numbers): found a little tutorial 
+	that can be compiled.
+
 2013-10-06  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/DependParser.hpp (main): some tests using Boost::spirit::qi.
